arreglado para redirigir a la pagina de pago

--- a/src/main/resources/templates/web/cart/checkout.peb.html
+++ b/src/main/resources/templates/web/cart/checkout.peb.html
@@ -40,7 +40,7 @@
                     </div>
                     {% endif %}
 
-                    <form action="/auth/me/cart/checkout" method="post" id="checkoutForm">
+                    <form action="/auth/me/cart/checkout/userdata" method="post" id="checkoutForm">
                         <input type="hidden" name="{{ csrfParamName }}" value="{{ csrfToken }}">
 
                         <!-- Datos personales -->
