Varios bugs de pedidos corregidos, más info en el Pull Request

--- a/src/main/resources/templates/web/cart/checkout.peb.html
+++ b/src/main/resources/templates/web/cart/checkout.peb.html
@@ -187,7 +187,7 @@
 
                         <!-- Botones de acción -->
                         <div class="d-flex gap-3 justify-content-between mt-4">
-                            <a href="/auth/me/carrito" class="btn btn-outline-secondary">
+                            <a href="/auth/me/cart" class="btn btn-outline-secondary">
                                 <i class="bi bi-arrow-left me-2"></i>
                                 Volver al carrito
                             </a>
