Añadido el botón de cambiar contraseña y paginación en las listas de usuarios

--- a/src/main/resources/templates/common/header.peb.html
+++ b/src/main/resources/templates/common/header.peb.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>{{ appName }} - {{ appDescription }}</title>
+    <title>Dawazon</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="{{ csrfToken }}" name="_csrf"/>
