cosas que se me olvidaron meter en el comit anterior

--- a/src/main/resources/templates/common/navbar.peb.html
+++ b/src/main/resources/templates/common/navbar.peb.html
@@ -39,7 +39,7 @@
                             <img src="/defaultImg.png" alt="user" class="rounded-circle profile-img">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end shadow">
-                            <li><a class="dropdown-item" href="/auth/me">Mi Cuenta</a></li>
+                            <li><a class="dropdown-item" data-testid="Cuenta" href="/auth/me">Mi Cuenta</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
